// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AND Filters 1`] = `
{
  "sql": "((("uid" = ANY($1::"text"[]))) AND (("id" = $2))) AND (uid = 'x')",
  "type": "SLONIK_TOKEN_FRAGMENT",
  "values": [
    [
      "y",
      "x",
    ],
    3,
  ],
}
`;

exports[`AND Filters 2`] = `
{
  "sql": "("value" ILIKE '%cheap%') AND ((("uid" = ANY($1::"text"[]))) AND (("id" = $2))) AND (uid = 'x') AND (uid = 'anotherFilter')",
  "type": "SLONIK_TOKEN_FRAGMENT",
  "values": [
    [
      "y",
      "x",
    ],
    3,
  ],
}
`;

exports[`AND Filters deeply nested with OR 1`] = `
{
  "sql": "("value" ILIKE '%cheap%') AND ((((("uid" = ANY($1::"text"[])) AND ((("value" ILIKE '%cheap%')))) OR ((NOT ( "date" < NOW() ))))) AND (("id" = $2::"numeric"[]))) AND (uid = 'x') AND (uid = 'anotherFilter')",
  "type": "SLONIK_TOKEN_FRAGMENT",
  "values": [
    [
      "y",
      "x",
    ],
    [
      2,
      1,
    ],
  ],
}
`;

exports[`AND Filters nested with OR 1`] = `
{
  "sql": "((((("uid" = ANY($1::"text"[]))) OR ((NOT ( "id" > 5 ))))) AND (("id" = $2))) AND (uid = 'x')",
  "type": "SLONIK_TOKEN_FRAGMENT",
  "values": [
    [
      "y",
      "x",
    ],
    3,
  ],
}
`;

exports[`AND Filters nested with OR 2`] = `
{
  "sql": "("value" ILIKE '%cheap%') AND ((((("uid" = ANY($1::"text"[]))) OR ((NOT ( "id" > 5 ))))) AND (("id" = $2))) AND (uid = 'x') AND (uid = 'anotherFilter')",
  "type": "SLONIK_TOKEN_FRAGMENT",
  "values": [
    [
      "y",
      "x",
    ],
    3,
  ],
}
`;

exports[`Filters on array string fields with a single string 1`] = `
{
  "sql": "("uid" = ANY($1::"text"[])) AND (uid = 'x')",
  "type": "SLONIK_TOKEN_FRAGMENT",
  "values": [
    [
      "z",
    ],
  ],
}
`;

exports[`Filters on array string fields with a single string 2`] = `
{
  "sql": "("uid" = ANY($1::"text"[])) AND ("value" ILIKE '%cheap%') AND (uid = 'x') AND (uid = 'anotherFilter')",
  "type": "SLONIK_TOKEN_FRAGMENT",
  "values": [
    [
      "z",
    ],
  ],
}
`;

exports[`Filters on array string fields with multiple 1`] = `
{
  "sql": "("uid" = ANY($1::"text"[])) AND (uid = 'x')",
  "type": "SLONIK_TOKEN_FRAGMENT",
  "values": [
    [
      "y",
      "x",
    ],
  ],
}
`;

exports[`Filters on array string fields with multiple 2`] = `
{
  "sql": "("uid" = ANY($1::"text"[])) AND ("value" ILIKE '%cheap%') AND (uid = 'x') AND (uid = 'anotherFilter')",
  "type": "SLONIK_TOKEN_FRAGMENT",
  "values": [
    [
      "y",
      "x",
    ],
  ],
}
`;

exports[`Filters on date fields 1`] = `
{
  "sql": "(("date" > $1)) AND (uid = 'x')",
  "type": "SLONIK_TOKEN_FRAGMENT",
  "values": [
    "2022-02-03",
  ],
}
`;

exports[`Filters on date fields 2`] = `
{
  "sql": "(("date" > $1)) AND ("value" ILIKE '%cheap%') AND (uid = 'x') AND (uid = 'anotherFilter')",
  "type": "SLONIK_TOKEN_FRAGMENT",
  "values": [
    "2022-02-03",
  ],
}
`;
